init Lit. review

--- a/Report/00 Preamble/Abbreviations.tex
+++ b/Report/00 Preamble/Abbreviations.tex
@@ -3,6 +3,6 @@
 \section*{Abbreviations}
 \addcontentsline{toc}{section}{Abbreviations}
 \large 
-Flux Capacitor \hfill FC\\
-Gigawatt \hfill GW\\
+Long Short-Term Memory \hfill LSTM\\
+State of Health \hfill SOH\\
 
