--- a/Report/00 Front-Matter/Abstract.tex
+++ b/Report/00 Front-Matter/Abstract.tex
@@ -1,6 +1,6 @@
 
-\section*{Abstract}
-\addcontentsline{toc}{section}{Abstract}
+\chapter*{Abstract}
+\addcontentsline{toc}{chapter}{Abstract}
 \vspace{2cm}
 
 \large
