--- a/Report/00 Front-Matter/Frontpage.tex
+++ b/Report/00 Front-Matter/Frontpage.tex
@@ -9,8 +9,8 @@
 	\end{center}
 	\vspace{5mm}
 	\begin{center}
-		\textbf{\begin{LARGE}
-		Project Title
+		\textbf{\begin{LARGE} %============== TITLE
+		Evaluating Resource Utilisation vs Accuracy of Quantise Deep Learning Models for Battery Health on Constrained Hardware 
 		\end{LARGE}}
 		\vspace{5mm}
 	\end{center}
