--- a/Report/00 Front-Matter/Abbreviations.tex
+++ b/Report/00 Front-Matter/Abbreviations.tex
@@ -1,7 +1,7 @@
 %Comment the whole thing out if you don't want it
 
-\section*{Abbreviations}
-\addcontentsline{toc}{section}{Abbreviations}
+\chapter*{Abbreviations}
+\addcontentsline{toc}{chapter}{Abbreviations}
 \large 
 Long Short-Term Memory \hfill LSTM\\
 State of Health \hfill SOH\\
