--- a/Report/00 Front-Matter/Acknowledgements.tex
+++ b/Report/00 Front-Matter/Acknowledgements.tex
@@ -1,5 +1,5 @@
-\section*{Acknowledgements}
-\addcontentsline{toc}{section}{Acknowledgements}
+\chapter*{Acknowledgements}
+\addcontentsline{toc}{chapter}{Acknowledgements}
 
 \vspace{2cm}
 
