--- a/Report/00 Front-Matter/Lists.tex
+++ b/Report/00 Front-Matter/Lists.tex
@@ -6,8 +6,8 @@
 %     Natural (1,2,3,...) 
 %     Sectional (1.1, 1.2 for chapter 1. 2.1, 2.2,... for chapter 2) 
 
-
-\addcontentsline{toc}{section}{List of Tables and Figures}
+\chapter*{List of Tables and Figures}
+\addcontentsline{toc}{chapter}{List of Tables and Figures}
 
 \listoffigures
 %\addcontentsline{toc}{section}{List of Figures}
