--- a/Report/XX Back-Matter/Bibliography.tex
+++ b/Report/XX Back-Matter/Bibliography.tex
@@ -1,8 +1,4 @@
 
-\chapter*{Bibliography}
 \addcontentsline{toc}{chapter}{Bibliography}
-\vspace{2cm}
 
-\nocite{*}
-\bibliographystyle{abbrv}
-\bibliography{references}
+\printbibliography
