--- a/Report/00 Front-Matter/Abbreviations.tex
+++ b/Report/00 Front-Matter/Abbreviations.tex
@@ -2,7 +2,15 @@
 
 \chapter*{Abbreviations}
 \addcontentsline{toc}{chapter}{Abbreviations}
-\large 
-Long Short-Term Memory \hfill LSTM\\
-State of Health \hfill SOH\\
+
+
+
+\printacronyms[heading=none, sort=true]
+
+
+
+
+% \large 
+% Long Short-Term Memory \hfill LSTM\\
+% State of Health \hfill SOH\\
 
