--- a/Report/XX Back-Matter/Appendices.tex
+++ b/Report/XX Back-Matter/Appendices.tex
@@ -1,6 +1,8 @@
+
+
 \begin{appendices}
-\addcontentsline{toc}{chapter}{Appendices}
 
-
+    \include{Report/XX Back-Matter/Appendix/code}
+    \lstinputlisting[language=Python, caption={LSTM}]{Report/XX Back-Matter/Appendix/lstm.py}
 
 \end{appendices}
