--- a/Report.tex
+++ b/Report.tex
@@ -29,6 +29,11 @@
 \usepackage{setspace}
 \onehalfspacing
 
+    % Abreviations
+\usepackage{acro}
+\input{Report/00 Front-Matter/Definitions}
+
+    % Other
 \usepackage{amsmath} %For both in-line and equation mode
 \numberwithin{equation}{section} %Numbering equations per section
 \usepackage{algorithm}
@@ -59,6 +64,34 @@
 \fancyfoot[C]{\thepage}
 
 
+% For code in the Appendix
+\usepackage{listings}
+\definecolor{codegreen}{rgb}{0,0.6,0}
+\definecolor{codegray}{rgb}{0.5,0.5,0.5}
+\definecolor{codepurple}{rgb}{0.58,0,0.82}
+\definecolor{backcolour}{rgb}{0.95,0.95,0.92}
+\lstdefinestyle{mystyle}{
+    backgroundcolor=\color{backcolour},   
+    commentstyle=\color{codegreen},
+    keywordstyle=\color{magenta},
+    numberstyle=\tiny\color{codegray},
+    stringstyle=\color{codepurple},
+    basicstyle=\ttfamily\footnotesize, % Monospaced font, slightly smaller
+    breakatwhitespace=false,         
+    breaklines=true,                 
+    captionpos=b,                    
+    keepspaces=true,                 
+    numbers=left,                    
+    numbersep=5pt,                  
+    showspaces=false,                
+    showstringspaces=false,
+    showtabs=false,                  
+    tabsize=2
+}
+\lstset{style=mystyle}
+
+
+
 %%%%%%%%%%%%%%%%%%%%%%%%%% DOCUMENT STARTS %%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
@@ -85,7 +118,7 @@
 \include{"Report/00 Front-Matter/Lists"}
 \include{"Report/00 Front-Matter/Acknowledgements"}
 \include{"Report/00 Front-Matter/Abstract"}
-\include{"Report/00 Front-Matter/Abbreviations"}
+\input{"Report/00 Front-Matter/Abbreviations"}
 
     % Save page count to continue in end matter
 \newcounter{frontmatterpage}
