lit review hardware

--- a/Report/00 Front-Matter/Definitions.tex
+++ b/Report/00 Front-Matter/Definitions.tex
@@ -20,7 +20,7 @@
 
 \DeclareAcronym{bms}{
     short = BMS,
-    long = Battery Management System
+    long = Battery Management Systems
 }
 
 % ------------------------------------------------------------
@@ -99,6 +99,13 @@
 \DeclareAcronym{dl}{
     short = DL,
     long = Deep Learning
+}
+
+% ------------------------------------------------------------
+
+\DeclareAcronym{nn}{
+    short = NN,
+    long = Neural Network
 }
 
 % ------------------------------------------------------------
@@ -249,56 +256,118 @@
 % ------------------------------------------------------------
 
 \DeclareAcronym{cuda}{
-    short = CUDA
+    short = CUDA,
     long = Compute Unified Device Architecture
 }
 
 % ------------------------------------------------------------
 
 \DeclareAcronym{cudnn}{
-    short = cuDNN
+    short = cuDNN,
     long = CUDA Deep Neural Network Library
 }
 
 % ------------------------------------------------------------
 
 \DeclareAcronym{onnx}{
-    short = ONNX
+    short = ONNX,
     long = Open Neural Network Exchange
 }
 
 % ------------------------------------------------------------
 
 \DeclareAcronym{trt}{
-    short = TensorRT
+    short = TensorRT,
     long = NVIDIA TensorRT Inference Optimiser
 }
 
 % ------------------------------------------------------------
 
 \DeclareAcronym{ai}{
-    short = AI
+    short = AI,
     long = Artificial Intelligence
 }
 
 % ------------------------------------------------------------
 
 \DeclareAcronym{iot}{
-    short = IoT
+    short = IoT,
     long = Internet of Things
 }
 
 % ------------------------------------------------------------
 
 \DeclareAcronym{aiot}{
-    short = AIoT
+    short = AIoT,
     long = Artificial Intelligence of Things
 }
 
 % ------------------------------------------------------------
 
+\DeclareAcronym{tinyml}{
+    short = TinyML,
+    long = Tiny Machine Learning
+}
+
+% ------------------------------------------------------------
+
+\DeclareAcronym{int8}{
+    short = INT8,
+    long = 8-bit Signed Integer
+}
+
+% ------------------------------------------------------------
+
+\DeclareAcronym{fp32}{
+    short = FP32,
+    long = Single-precision Floating-point Format
+}
+
+% ------------------------------------------------------------
+
+\DeclareAcronym{fp16}{
+    short = FP16,
+    long = Half-precision Floating-point Format
+}
+
+% ------------------------------------------------------------
+
+\DeclareAcronym{tops}{
+    short = TOPS,
+    long = Tera Operations Per Second
+}
+
+% ------------------------------------------------------------
+
+\DeclareAcronym{pmc}{
+    short = PMC,
+    long = Performance Monitoring Counter
+}
+
+% ------------------------------------------------------------
+
+\DeclareAcronym{dvfs}{
+    short = DVFS,
+    long = Dynamic Voltage and Frequency Scaling
+}
+
+
+
+% ============================================================
+%
+%                        General Terms
+%
+% ============================================================
+
+\DeclareAcronym{sota}{
+    short = SOTA,
+    long = State-of-The-Art
+}
+
+% ------------------------------------------------------------
+
 % \DeclareAcronym{}{
-%     short = 
+%     short = ,
 %     long = 
 % }
 
