--- a/Report.tex
+++ b/Report.tex
@@ -35,6 +35,7 @@
 
     % Other
 \usepackage{amsmath} %For both in-line and equation mode
+\usepackage{siunitx} % For SI units
 \numberwithin{equation}{section} %Numbering equations per section
 \usepackage{algorithm}
 \usepackage{algorithmic} %Algorithm styles
@@ -47,9 +48,17 @@
 \usepackage{tabularx}
 \usepackage[toc,page]{appendix} 
 \usepackage{enumitem}
-\usepackage[style=ieee, backend=biber]{biblatex} % Bibliography
-\addbibresource{references.bib}                  % |
 
+% Bibliography
+\usepackage[style=ieee, backend=biber]{biblatex} 
+\addbibresource{references.bib}                  
+\AtEveryBibitem{
+    \clearfield{note}     % Removes the TLDR and citation counts
+    \clearfield{abstract} % Removes the abstract if Zotero exported it
+    \clearfield{issn}     % Removes the ISSN number
+    \clearfield{isbn}     % Removes ISBN numbers
+    \clearlist{language}  % Removes "Language: English" etc.
+}
 
 
 %KEEP THIS ONE LAST it's quite buggy, it allows you to click on links within the pdf and web links without changing the colour. The mouse cursor simply changes its icon to indicate to the user. Great tool - still awkward
